# anchorchain

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  go.mod  go.sum
.github/workflows/: build.yml
api/: server.go
cmd/anchor-cli/: main.go
cmd/anchorchaind/: main.go
deploy/devnet/: README.md  docker-compose.yml
docker/: Dockerfile  README.md  docker-compose.yml
docs/: api.md  architecture.md  demo.md  deploy-devnet.md  devnet.md  quickstart.md  whitepaper.md
examples/ai-dataset-proof/: README.md  anchor_dataset.py  sample-dataset.csv  verify_dataset.py
examples/document-proof/: README.md  package-lock.json  package.json  tsconfig.json
examples/document-proof/samples/: hello.txt
examples/document-proof/src/: main.ts
explorer/: README.md  package-lock.json  package.json
explorer/app/: globals.css  layout.tsx
explorer/app/chain/[chainId]/: page.tsx
explorer/components/: chain-page.tsx  copy-button.tsx  entry-page.tsx  home-page.tsx
explorer/lib/: api.ts  use-api-base.ts
node/factomd/: factomd.conf
node/factomd/engine/: simWallet.go
node/factomd/state/: entrywriter.go  stateConsensus.go  validation.go
sdk/js/: README.md  package-lock.json  package.json  tsconfig.json
sdk/js/examples/: basic.ts
sdk/js/src/: client.ts  index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/anchorchain/: __init__.py  client.py  models.py
sdk/python/anchorchain_sdk_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/python/examples/: basic.py
wallet/cli/: commands.go
(+2 files in other folders)
