[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anchorchain-sdk-python"
version = "0.1.0"
description = "Minimal Python SDK for the AnchorChain HTTP API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0,<3"]

[tool.setuptools]
packages = ["anchorchain"]
